@@ -26,6 +26,8 @@
   ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
   POSSIBILITY OF SUCH DAMAGE. */
 
+/* $Id$ */
+
 /*
    atol.S
 
@@ -73,62 +75,62 @@
 
 _U(atol):
 	PUSH	r17
-	LOAD_Z	(str_lo, str_hi)	; set pointer to string
+	X_movw	ZL, str_lo		; set pointer to string
 	CLR	num_hi_hi
 	CLR	num_hi_lo
 	CLR	num_lo_hi
 	CLR	num_lo_lo		; clear number
 	CLT				; clear sign
 
-.atol_loop:
+.L_atol_loop:
 	LD	tmp, Z+			; get (next) character
 	TST	tmp			; is it end of string?
-	BREQ	.atol_sig
+	BREQ	.L_atol_sig
 	CPI	tmp, ' '		; skip whitespace
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '\t'
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '\n'
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '\f'
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '\r'
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '\v'
-	BREQ	.atol_loop
+	BREQ	.L_atol_loop
 	CPI	tmp, '+'		; if '+' go on
-	BREQ	.atol_loop2
+	BREQ	.L_atol_loop2
 	CPI	tmp, '-'		; if '-' remember sign
-	BRNE	.atol_digit
+	BRNE	.L_atol_digit
 
-.atol_neg:
+.L_atol_neg:
 	SET				; remember number is negative
 
-.atol_loop2:
+.L_atol_loop2:
 	LD	tmp, Z+
 	TST	tmp
-	BREQ	.atol_sig
+	BREQ	.L_atol_sig
 
-.atol_digit:
+.L_atol_digit:
 	CPI	tmp, '0'		; test on [0 .. 9]
-	BRLT	.atol_sig
+	BRLT	.L_atol_sig
 	CPI	tmp, '9'+1
-	BRGE	.atol_sig
+	BRGE	.L_atol_sig
 	SUBI	tmp, '0'		; make figure a number
 	XCALL	__mulsi_const_10	; r25:r24:r23:r22 *= 10
 	ADD	num_lo_lo, tmp		; num = (num * 10) + (tmp - '0')
 	ADC	num_lo_hi, __zero_reg__
 	ADC	num_hi_lo, __zero_reg__
 	ADC	num_hi_hi, __zero_reg__
-	RJMP	.atol_loop2		; next figure
+	RJMP	.L_atol_loop2		; next figure
 
-.atol_sig:
+.L_atol_sig:
 	CP	num_lo_lo, __zero_reg__
 	CPC	num_lo_hi, __zero_reg__
 	CPC	num_hi_lo, __zero_reg__
 	CPC	num_hi_hi, __zero_reg__	; did we get a number?
-	BREQ	.atol_done		; no, drop sign and return
-	BRTC	.atol_done		; positive number? -> return
+	BREQ	.L_atol_done		; no, drop sign and return
+	BRTC	.L_atol_done		; positive number? -> return
 	COM	num_hi_hi
 	COM	num_hi_lo
 	COM	num_lo_hi
@@ -137,11 +139,11 @@ _U(atol):
 	SBCI	num_hi_lo, 0xff
 	SBCI	num_hi_hi, 0xff		; make number negative
 
-.atol_done:
+.L_atol_done:
 	POP	r17
 	RET
 
-.atol_end:
-	.size _U(atol), .atol_end - _U(atol)
+.L_atol_end:
+	.size _U(atol), .L_atol_end - _U(atol)
 
 #endif /* not __DOXYGEN__ */
